SFDCProject/src/objects/Customer_Credit__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Credit_Requester__c</fullName>
        <formula>CreatedBy.Account_Name__c</formula>
        <label>Account: Credit Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Credit</relationshipLabel>
        <relationshipName>Customer_Credit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_1_truncated__c</fullName>
        <formula>SUBSTITUTE(Adverse_Action_Reason1__c, LEFT(Adverse_Action_Reason1__c, FIND(&quot;: &quot;, Adverse_Action_Reason1__c)), &quot;&quot;)</formula>
        <label>Adverse Action 1 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_2_truncated__c</fullName>
        <formula>SUBSTITUTE(Adverse_Action_Reason2__c, LEFT(Adverse_Action_Reason2__c, FIND(&quot;: &quot;, Adverse_Action_Reason2__c)), &quot;&quot;)</formula>
        <label>Adverse Action 2 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_3_truncated__c</fullName>
        <formula>SUBSTITUTE(Adverse_Action_Reason3__c, LEFT(Adverse_Action_Reason3__c, FIND(&quot;: &quot;, Adverse_Action_Reason3__c)), &quot;&quot;)</formula>
        <label>Adverse Action 3 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_Reason1__c</fullName>
        <label>Adverse Action Reason1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_Reason2__c</fullName>
        <label>Adverse Action Reason2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_Reason3__c</fullName>
        <label>Adverse Action Reason3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>if(DateOfBirth__c == null, NULL, FLOOR((TODAY()-DateOfBirth__c)/365.25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Passed Credit Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Pass &amp; signed up for ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid: Full Payment received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Approval from partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Approval Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Home - Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPASS HI Credit criteria met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BKFilingCode__c</fullName>
        <label>BKFilingCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BKFilingDate__c</fullName>
        <label>BKFilingDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BKNumMonths__c</fullName>
        <label>BKNumMonths</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BKOver60months__c</fullName>
        <label>BKWithin60Months</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banky_Outcome__c</fullName>
        <label>Banky Outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau1__c</fullName>
        <label>Bureau (Experian)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau2__c</fullName>
        <label>Bureau (TransUnion)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau3__c</fullName>
        <label>Bureau (Equifax)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval_Amount__c</fullName>
        <label>Conditional Approval Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Address Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Credit</relationshipLabel>
        <relationshipName>Customer_Credit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Address__c</fullName>
        <formula>IF(Decisioning_Bureau__c = &apos;Equifax&apos;, &apos;Equifax Credit Information Services, P.O. Box 740241, Atlanta, GA 30374, 1-800-685-1111, www.equifax.com&apos;,  IF(Decisioning_Bureau__c = &apos;TransUnion&apos;, &apos;TransUnion, P.O. Box 2000, Chester, PA 19022, 800-916-8800, www.transunion.com&apos;, &apos;Experian, 701 Experian Parkway, P.O. Box 2002, Allen, TX 75013, 1 888 EXPERIAN (1 888 397 3742). www.experian.com&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Bureau Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Decision_on_Portal__c</fullName>
        <formula>IF(AND(OR(Text(Status__c)=&apos;PASS&apos;,Text(Status__c)=&apos;CPASS&apos;,Text(Status__c)=&apos;FAIL&apos;,Text(Status__c)=&apos;MANUAL&apos;,Text(Status__c)=&apos;N/A&apos;),
TEXT(Sunrun_Credit_Status__c) = &apos;CPASS&apos;,Fico_Number__c &gt;649,Fico_Number__c&lt;680),&apos;LOWFICO&apos;,
CASE(Status__c,
&quot;&quot;,&quot;Sent&quot;, 
&quot;CPASS&quot;, TEXT(Sunrun_Credit_Status__c),
&quot;PASS&quot;, TEXT(Sunrun_Credit_Status__c),
&quot;FAIL&quot;, TEXT(Sunrun_Credit_Status__c),
&quot;MANUAL&quot;,&quot;MANUAL&quot;,
&quot;N/A&quot;,
IF(OR( TEXT(Sunrun_Credit_Status__c) = &apos;CPASS&apos;, TEXT(Sunrun_Credit_Status__c) = &apos;PASS&apos;, TEXT(Sunrun_Credit_Status__c) = &apos;FAIL&apos;), TEXT(Sunrun_Credit_Status__c),&apos;MANUAL&apos;),
&quot;MANUAL - Please Review Credit Report And Credit Score Card&quot;,&quot;Manual&quot;,
&quot;Please Review Credit Report And Credit Score Card&quot;,&quot;Manual&quot;,
&quot;NOT ON THE TITLE OF THE HOME&quot;,&quot;NOT ON THE TITLE OF THE HOME&quot;,
&quot;HomeownerInitialLogin&quot;,&quot;HomeownerInitialLogin&quot;,
&quot;HomeownerApplicationComplete&quot;,&quot;HomeownerApplicationComplete&quot;,
&quot;HomeownerAuthorizedCreditCheck&quot;,&quot;HomeownerAuthorizedCreditCheck&quot;,
&quot;FROZENFILE&quot;,&quot;FROZENFILE&quot;, 
TEXT (Status__c)
))</formula>
        <inlineHelpText>This field is used to display credit status on partner portal</inlineHelpText>
        <label>Sunrun Status on Portal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_requested_from_portal__c</fullName>
        <formula>If (OR (CreatedBy.Profile.Name = &apos;PartnerSales&apos;, CreatedBy.Profile.Name = &apos;PartnerOperations&apos;, CreatedBy.Profile.Name = &apos;PartnerAdmin+Ops&apos;, CreatedBy.Profile.Name = &apos;Sales - Direct&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit requested from portal?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <externalId>true</externalId>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Pulled_String__c</fullName>
        <formula>if( OR(ISNULL(Date_Pulled__c),ISBLANK(Date_Pulled__c)), &apos;&apos; , MID(TEXT(Date_Pulled__c - 0.291666662), 6, 2)&amp;&quot;/&quot;&amp;MID(TEXT( Date_Pulled__c - 0.291666662), 9, 2)&amp;&quot;/&quot;&amp;LEFT( TEXT(Date_Pulled__c - 0.291666662) , 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Pulled String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Pulled__c</fullName>
        <label>Date Pulled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Run1__c</fullName>
        <label>Date Run (Experian)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Run2__c</fullName>
        <label>Date Run (TransUnion)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Run3__c</fullName>
        <label>Date Run (Equifax)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <description>The date SunRun Submitted the credit check request to LeaseDimensions</description>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Deal Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decisioning_Bureau__c</fullName>
        <label>Decisioning Bureau</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_sent_to_partner_with_no_ACH_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email sent to partner with no ACH Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_sent_with_ACH_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email sent with ACH Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Adverse_Action_1_truncated__c</fullName>
        <formula>SUBSTITUTE(Equifax_Adverse_Action_Reason1__c, LEFT(Equifax_Adverse_Action_Reason1__c, FIND(&quot;: &quot;, Equifax_Adverse_Action_Reason1__c)), &quot;&quot;)</formula>
        <label>Equifax Adverse Action 1 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Adverse_Action_2_truncated__c</fullName>
        <formula>SUBSTITUTE(Equifax_Adverse_Action_Reason2__c, LEFT(Equifax_Adverse_Action_Reason2__c, FIND(&quot;: &quot;, Equifax_Adverse_Action_Reason2__c)), &quot;&quot;)</formula>
        <label>Equifax Adverse Action 2 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Adverse_Action_3_truncated__c</fullName>
        <formula>SUBSTITUTE(Equifax_Adverse_Action_Reason3__c, LEFT(Equifax_Adverse_Action_Reason3__c, FIND(&quot;: &quot;, Equifax_Adverse_Action_Reason3__c)), &quot;&quot;)</formula>
        <label>Equifax Adverse Action 3 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Adverse_Action_Reason1__c</fullName>
        <label>Equifax Adverse Action Reason1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Adverse_Action_Reason2__c</fullName>
        <label>Equifax Adverse Action Reason2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Adverse_Action_Reason3__c</fullName>
        <label>Equifax Adverse Action Reason3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_BKNumMonths__c</fullName>
        <label>Equifax BKNumMonths</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Banky_Outcome__c</fullName>
        <label>Equifax Banky outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Mortgage_Outcome__c</fullName>
        <label>Equifax Mortgage Outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Reason__c</fullName>
        <label>Reason (Equifax)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <formula>IF(OR(ISBLANK(Adverse_Action_1_truncated__c), ISNULL(Adverse_Action_1_truncated__c)) , &apos;&apos;, &apos; * &apos; &amp; Adverse_Action_1_truncated__c &amp; BR() &amp; BR())
&amp; IF(OR(ISBLANK(Adverse_Action_2_truncated__c), ISNULL(Adverse_Action_2_truncated__c)) , &apos;&apos;, &apos; * &apos; &amp; Adverse_Action_2_truncated__c &amp; BR() &amp; BR()) 
&amp; IF(OR(ISBLANK(Adverse_Action_3_truncated__c), ISNULL(Adverse_Action_3_truncated__c)) , &apos;&apos;, &apos; * &apos; &amp; Adverse_Action_3_truncated__c &amp; BR() &amp; BR()) 
&amp; IF(OR(ISBLANK(Adverse_Action_4_truncated__c), ISNULL(Adverse_Action_4_truncated__c)) , &apos;&apos;, &apos; * &apos; &amp; Adverse_Action_4_truncated__c &amp; BR() &amp; BR()) 
&amp; IF(OR(ISBLANK(Adverse_Action_5_truncated__c), ISNULL(Adverse_Action_5_truncated__c)) , &apos;&apos;, &apos; * &apos; &amp;Adverse_Action_5_truncated__c &amp; BR() &amp; BR())
&amp; IF(ISPICKVAL(Reason__c,&apos;900X&apos;) , &apos; * &apos; &amp; &apos;The credit agency does not have sufficient reporting to establish a credit score. To resolve this error, contact any credit agency / agencies at the number below. Once you resolve the error, contact your sales representative as you may still be eligible for Sunrun Solar Service&apos; &amp; BR() &amp; BR() , &apos;&apos;)
&amp; IF(ISPICKVAL(Reason__c,&apos;SSN-FRAUDSHIELD-05&apos;) , &apos; * &apos; &amp; &apos;Your account triggered a fraud alert on Experian systems. To resolve this error, contact Experian at the number below. Once you resolve the alert, contact your sales representative as you may still be eligible for Sunrun Solar Service&apos; &amp; BR() &amp; BR() , &apos;&apos;)
&amp; IF(ISPICKVAL(Reason__c,&apos;SSN-FRAUDSHIELD-06&apos;) , &apos; * &apos; &amp; &apos;Your account triggered a fraud alert on Experian systems. To resolve this error, contact Experian at the number below. Once you resolve the alert, contact your sales representative as you may still be eligible for Sunrun Solar Service&apos; &amp; BR() &amp; BR() , &apos;&apos;)

&amp; IF(ISPICKVAL(Reason__c,&apos;LTV&apos;) , &apos; * &apos; &amp; &apos;Did not meet our minimum home loan to value minimum credit criteria.(calculated as the outstanding mortgage balance associated with the property on which the solar facility is being constructed divided by value of that property)&apos; &amp; BR() &amp; BR() , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Home_Value__c</fullName>
        <label>Estimated Home Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Adverse_Action_1_truncated__c</fullName>
        <formula>SUBSTITUTE(Experian_Adverse_Action_Reason1__c, LEFT(Experian_Adverse_Action_Reason1__c, FIND(&quot;: &quot;, Experian_Adverse_Action_Reason1__c)), &quot;&quot;)</formula>
        <label>Experian Adverse Action 1 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Adverse_Action_2_truncated__c</fullName>
        <formula>SUBSTITUTE(Experian_Adverse_Action_Reason2__c, LEFT(Experian_Adverse_Action_Reason2__c, FIND(&quot;: &quot;, Experian_Adverse_Action_Reason2__c)), &quot;&quot;)</formula>
        <label>Experian Adverse Action 2 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Adverse_Action_3_truncated__c</fullName>
        <formula>SUBSTITUTE(Experian_Adverse_Action_Reason3__c, LEFT(Experian_Adverse_Action_Reason3__c, FIND(&quot;: &quot;, Experian_Adverse_Action_Reason3__c)), &quot;&quot;)</formula>
        <label>Experian Adverse Action 3 (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Adverse_Action_Reason1__c</fullName>
        <label>Experian Adverse Action Reason1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Adverse_Action_Reason2__c</fullName>
        <label>Experian Adverse Action Reason2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Adverse_Action_Reason3__c</fullName>
        <label>Experian Adverse Action Reason3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_BKFilingCode__c</fullName>
        <label>Experian BKFilingCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_BKFilingDate__c</fullName>
        <label>Experian BKFilingDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Experian_BKNumMonths__c</fullName>
        <label>Experian BKNumMonths</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_BKOver60months__c</fullName>
        <label>Experian BKOver60months</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Banky_Outcome__c</fullName>
        <label>Experian Banky outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Mortgage_Outcome__c</fullName>
        <label>Experian Mortgage Outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Reason__c</fullName>
        <label>Reason (Experian)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FICO1__c</fullName>
        <label>FICO (Experian)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO2__c</fullName>
        <label>FICO (TransUnion)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FICO3__c</fullName>
        <label>FICO (Equifax)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_Score__c</fullName>
        <label>Failed Score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fico_Number_Field__c</fullName>
        <formula>VALUE( Fico__c )</formula>
        <label>Fico (Number Field)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fico_Number__c</fullName>
        <formula>IF(OR(ISNULL(Fico__c), ISBLANK(Fico__c),  NOT(ISNUMBER(Fico__c))) , -1, 
     IF((VALUE(Fico__c) &gt; 850), -1, VALUE(Fico__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fico Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Equity1__c</fullName>
        <label>Home Equity1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Equity2__c</fullName>
        <label>Home Equity2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Equity_Amt1__c</fullName>
        <label>Home Equity Amt1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Equity_Amt2__c</fullName>
        <label>Home Equity Amt2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Equity_OpenDate1__c</fullName>
        <label>Home Equity OpenDate1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Equity_OpenDate2__c</fullName>
        <label>Home Equity OpenDate2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Owner_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Owner Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Household_Income__c</fullName>
        <label>Household Income</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <label>Installer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <label>LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Dimensions_State__c</fullName>
        <label>Lease Dimensions State</label>
        <picklist>
            <picklistValues>
                <fullName>Created and Invited Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Ran for Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resent Invitation to Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshed Homeowner&apos;s Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MI__c</fullName>
        <label>MI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mortgage_Outcome__c</fullName>
        <label>Mortgage Outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OFAC_Status__c</fullName>
        <label>OFAC Status</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_Financed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Financed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Comments__c</fullName>
        <label>Pending Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Notes__c</fullName>
        <label>Pending Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Reason__c</fullName>
        <label>Pending Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cannot cross out or write on contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot verify sig. need printed name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Conditional Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing payment method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing sales rep signature or ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPASS: need to sign up for ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPASS Prepaid: need Full Payment or CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired credit check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed cr, need cr for other homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major change order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor change order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing sig. of homeowner who pass cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Cond. Approval or Full Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Credit Check:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need first 5 pages of trust:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Mortgage Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need signed Officer&apos;s Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot verify sig, need printed name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need change order form for correct addr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Id__c</fullName>
        <label>Proposal Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>NO HOME VALUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TITLE REVIEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSN-DUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSN-FRAUDSHIELD-05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSN-FRAUDSHIELD-06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELINQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FROZENFILE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SRH_Customer_Number__c</fullName>
        <description>SRH Customer Number</description>
        <label>SRH Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email_Calculated__c</fullName>
        <label>Sales Rep Email Calculated</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email_Oppty__c</fullName>
        <label>Sales Rep Email Oppty</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Representative_Oppty__c</fullName>
        <label>Sales Representative Oppty</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Size_of_Household__c</fullName>
        <label>Size of Household</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>LeaseDimensions Status</label>
        <picklist>
            <picklistValues>
                <fullName>CPASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunrun_Credit_Status__c</fullName>
        <label>Sunrun Credit Decision</label>
        <picklist>
            <picklistValues>
                <fullName>CPASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sunrun_LTV__c</fullName>
        <label>Sunrun LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sunrun_Reason_Recorded__c</fullName>
        <label>Sunrun Reason Recorded</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Solar_Prepay_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Solar Prepay Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransUnion_BKNumMonths__c</fullName>
        <label>TransUnion BKNumMonths</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransUnion_Banky_Outcome__c</fullName>
        <label>TransUnion Banky outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransUnion_Mortgage_Outcome__c</fullName>
        <label>TransUnion Mortgage Outcome</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>